# HomeNet

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml
docs/: 网络管家_DDNS与端口转发_软件需求文档.docx
docs/superpowers/plans/: 2026-05-17-reference-ui-restore.md  2026-05-18-device-ipv6-ddns.md
docs/superpowers/specs/: 2026-05-17-reference-ui-restore-design.md  2026-05-18-device-ipv6-ddns-design.md
scripts/: apply-release-version.mjs  generate-updater-manifest.mjs  generate-updater-manifest.test.mjs  verify-autostart-control.mjs  verify-ci-workflow.mjs  verify-port-expression.mjs  verify-react-frontend.mjs  verify-ui-reference.mjs
src/: App.tsx  App.vue  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  certificates.rs  commands.rs  config.rs  device_discovery.rs  lib.rs  logging.rs  main.rs  reverse_proxy.rs  tray.rs
src-tauri/src/ddns/: aliyun.rs  mod.rs
src-tauri/src/forward/: manager.rs  mod.rs  system.rs  tcp.rs  udp.rs
src/components/: DdnsPanel.vue  DeviceDdnsPanel.tsx  DeviceDdnsPanel.vue  ForwardRulesPanel.tsx  ForwardRulesPanel.vue  LogPanel.tsx  LogPanel.vue  ReverseProxyPanel.tsx  ReverseProxyPanel.vue  RuntimeSettingsPanel.tsx  RuntimeSettingsPanel.vue  StatusCard.tsx  StatusCard.vue
src/composables/: useDraggableModal.ts
src/hooks/: useDraggableModal.ts
src/lib/: tauri.ts
src/styles/: global.css  panels.css
src/utils/: ports.ts
