[package]
name = "homenet"
version = "0.1.4"
description = "homenet · DDNS与端口转发"
authors = ["NoWat"]
edition = "2021"

[lib]
name = "home_net_lib"
# Desktop dev builds on the Windows GNU toolchain fail while linking the cdylib.
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.31"
local-ip-address = "0.6"
dirs-next = "2.0"
